Fix text overflow issue on issue show page

--- a/src/less/layout.css
+++ b/src/less/layout.css
@@ -85,3 +85,5 @@ a:hover {
 }
 
 .table td.center-height { vertical-align: middle;}
+
+.img-responsive { width: 100%;}
